--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "latest",
     "@fortawesome/free-solid-svg-icons": "latest",
     "@fortawesome/vue-fontawesome": "latest",
+    "@rollup/rollup-win32-x64-msvc": "^4.53.3",
     "colorui": "1.0.0",
     "pinia": "^2.1.7",
     "sass": "^1.77.8",
